relevant image files

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 experiments/_layout/
 experiments/compile/
 experiments/sound/
-experiments/images/
+experiments/images_other
 experiments/dots/
 experiments/watch
 experiments/mmturkey-0.6.js
