agent change between trials, sound sourcing and playing work (except for trial > 3 but will work when we have actual categories for these trials), part of data submission completed

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.DS_Store
 experiments/_layout/
 experiments/compile/
-experiments/sounds/
+experiments/sounds_other
 experiments/images_other
 experiments/dots/
 experiments/watch
