images for all categories

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ experiments/_layout/
 experiments/compile/
 experiments/sounds_other
 experiments/images_other
+experiments/images_old
 experiments/dots/
 experiments/watch
